src/objects/R_D__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>R&amp;Ds</relationshipLabel>
        <relationshipName>R_Ds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courier__c</fullName>
        <label>Courier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>Fedex</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Viettel Post</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courier_cost__c</fullName>
        <label>Courier cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>R&amp;Ds</relationshipLabel>
        <relationshipName>R_Ds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Samples_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Samples Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>R&amp;D</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>R&amp;Ds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>